@@ -1,3 +1,8 @@
+2013-02-26  Donal K. Fellows  <dkf@users.sf.net>
+
+	* tests/chanio.test (chan-io-28.7): [Bug 3605120]: Stop test from
+	hanging when run standalone.
+
 2013-02-26  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* generic/tclObj.c: Don't panic if Tcl_ConvertToType is called for a
